--- a/bbc/news/templates/layouts/footer.html
+++ b/bbc/news/templates/layouts/footer.html
@@ -7,9 +7,9 @@
                     <div class="footer-widget">
                         <h3 class="title">Get in Touch</h3>
                         <div class="contact-info">
-                            <p><i class="fa fa-map-marker"></i>123 News Street, NY, USA</p>
-                            <p><i class="fa fa-envelope"></i>info@example.com</p>
-                            <p><i class="fa fa-phone"></i>+123-456-7890</p>
+                            <p><i class="fa fa-map-marker"></i>{{ companyData.c_address}}</p>
+                            <p><i class="fa fa-envelope"></i>{{ companyData.c_email }}</p>
+                            <p><i class="fa fa-phone"></i>{{ companyData.c_phone }}</p>
                             <div class="social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -82,21 +82,7 @@
     </div>
     <!-- Footer Menu End -->
 
-    <!-- Footer Bottom Start -->
-    <div class="footer-bottom">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 copyright">
-                    <p>Copyright &copy; <a href="https://htmlcodex.com">HTML Codex</a>. All Rights Reserved</p>
-                </div>
 
-                <div class="col-md-6 template-by">
-                    <p>Template By <a href="https://htmlcodex.com">HTML Codex</a></p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Footer Bottom End -->
 
     <!-- Back to Top -->
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
