--- a/bbc/news/templates/pages/home/home.html
+++ b/bbc/news/templates/pages/home/home.html
@@ -8,62 +8,24 @@
     <div class="top-news">
         <div class="container">
             <div class="row">
+                {% for category in categoryData %}
                 <div class="col-md-6 tn-left">
                     <div class="row tn-slider">
+                        {% for news in category.news_set.all %}
                         <div class="col-md-6">
                             <div class="tn-img">
-                                <img src="img/news-450x350-1.jpg"/>
+                                <img src="{{ news.image.url }}"/>
                                 <div class="tn-title">
-                                    <a href="">Lorem ipsum dolor sit amet</a>
+                                    <a href="{% url 'news-details' news.slug %}">{{ news.title }}</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="tn-img">
-                                <img src="img/news-450x350-2.jpg"/>
-                                <div class="tn-title">
-                                    <a href="">Integer hendrerit elit eget purus sodales maximus</a>
-                                </div>
-                            </div>
-                        </div>
+                            {% endfor %}
+
                     </div>
                 </div>
-                <div class="col-md-6 tn-right">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="tn-img">
-                                <img src="img/news-350x223-1.jpg"/>
-                                <div class="tn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="tn-img">
-                                <img src="img/news-350x223-2.jpg"/>
-                                <div class="tn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="tn-img">
-                                <img src="img/news-350x223-3.jpg"/>
-                                <div class="tn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="tn-img">
-                                <img src="img/news-350x223-4.jpg"/>
-                                <div class="tn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
+
             </div>
         </div>
     </div>
@@ -73,135 +35,31 @@
     <div class="cat-news">
         <div class="container">
             <div class="row">
+                {% for category in categoryData %}
                 <div class="col-md-6">
-                    <h2>Sports</h2>
+                    <h2>{{ category.cat_name }}</h2>
                     <div class="row cn-slider">
+                        {% for news in category.news_set.all %}
                         <div class="col-md-6">
                             <div class="cn-img">
-                                <img src="img/news-350x223-1.jpg"/>
+                                <img src="{{ news.image.url }}"/>
                                 <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
+                                    <a href="{% url 'news-details' news.slug %}">{{ news.title }}</a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-2.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-3.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
+                            {% endfor %}
+
                     </div>
                 </div>
-                <div class="col-md-6">
-                    <h2>Technology</h2>
-                    <div class="row cn-slider">
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-4.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-5.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-1.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                {% endfor %}
+
             </div>
         </div>
     </div>
     <!-- Category News End-->
 
-    <!-- Category News Start-->
-    <div class="cat-news">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <h2>Business</h2>
-                    <div class="row cn-slider">
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-5.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-4.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-3.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <h2>Entertainment</h2>
-                    <div class="row cn-slider">
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-2.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-1.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="cn-img">
-                                <img src="img/news-350x223-3.jpg"/>
-                                <div class="cn-title">
-                                    <a href="">Lorem ipsum dolor sit</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Category News End-->
+
 
     <!-- Tab News Start-->
     <div class="tab-news">
